# AdvCommunicatonSystem

./: CMakeLists.txt  README.md  fileHandler.h  input.txt  output.txt  state.h  system.cpp  system.h  systemStates.cpp
NCS/: fileHandler.cpp  main.cpp  stateMachine.h  systemMachine.cpp  systemMachine.h  systemStates.h
